--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "cherny.co",
+  "name": "nextjs-shortener",
   "version": "0.1.0",
+  "description": "A simple URL shortener built with Next.js",
+  "author": "Sergey Chernyshev",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,7 +11,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@vercel/kv": "^1.0.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
